Complete rebrand: Replace all DD10 references with DIDI across entire repository
- Updated CLI interface to use DIDI branding
- Updated core modules (agent_router, executor, prompt_engine)
- Updated README with DARA-DIDI naming
- Updated all documentation files in /docs
- Updated all legal documents (TOS, Privacy Policy, Ethical Use)
- Updated test files
- Updated package.json name and description
- Verified zero DD10 references remain

This commit ensures complete consistency with DARA & DIDI (Deep Impact Data Illumination) branding.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dd10-dara-agent",
+  "name": "dara-didi-agent",
   "version": "1.0.0",
-  "description": "Deep Diligent Agent - Modular AI research toolkit combining DARA and DD10",
+  "description": "Deep Diligent Agent - Modular AI research toolkit combining DARA and DIDI",
   "main": "interface/cli.js",
   "type": "module",
   "scripts": {
